# CommandCenter

./: .gitignore  README.md  main.py  pyproject.toml
Backend/: .env_example  config.py  wsgi.py
Backend/app/: __init__.py  utils.py
Backend/app/drone/: __init__.py  routes.py
Drone/: Drone.py  GuidedControl.py  MissionControl.py  __init__.py  allowed_commands.py  utils.py
Front/: .babelrc  App.js  app.config.js  app.json  metro.config.js  package-lock.json  package.json
Front/src/components/: ActionButton.js  Card.js  Cell.js  InputWithErrors.js  LoadingSpinner.js  MissionCard.js  Modal.js  OverlayButtons.js  PopUpMenu.js  RenameModal.js  ScalableText.js  SelectField.js  SelectList.js  SocketModalProvider.js  WaypointsLog.js
Front/src/components/Map/: index.js
Front/src/components/Modals/: ErrorModal.js  Modal.js  ModalProvider.js  RenameModal.js  SelectModal.js
Front/src/components/Navigation/: Navigation.js
Front/src/constants/: commands.js  dronePopUpOptions.js  missionPopUpOptions.js  statuses.js  styles.js
Front/src/database/: database.js
Front/src/hooks/: useDroneData.js
Front/src/screens/: About.js  AddDrone.js  Drones.js  MissionEditor.js  Missions.js  Observe.js
Front/src/services/: api.js  socket.js
Front/src/utils/: getBearing.js  getDistance.js  getMidpoint.js  secondsToTimeStr.js  startMissionBase.js  timestampToDateStr.js
tests/: conftest.py
tests/test_backend/: test_backend_utils.py  test_http.py  test_sockets.py
tests/test_drone/: conftest.py  test_drone_utils.py  test_guided_control.py  test_integration.py  test_mission_control.py
(+23 files in other folders)
