[tool.poetry]
name = "Drone"
version = "0.1.0"
description = ""
authors = ["Denis Bobela <youtipie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dronekit = "^2.9.2"
dronekit-sitl = "^3.3.0"
mavproxy = "^1.8.71"
prompt-toolkit = "^3.0.48"
wxpython = "^4.2.2"
python-dotenv = "^1.0.1"
flask = "3.0"
gunicorn = "^23.0.0"
eventlet = "^0.38.0"
flask-socketio = "^5.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-timeout = "^2.3.1"
requests = "^2.32.3"
websocket-client = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
